# VulpineOS

./: .dockerignore  .gitignore  .public-boundary-denylist.local  CONTRIBUTING.md  Dockerfile.vulpinebox  Makefile  README.md  SECURITY.md  auto_fix_fingerprint_patch.py  docker-compose.yml  fix_all_patches.py  fix_fingerprint_patch.py  fix_navigator_patch.py  fix_patches.py  go.mod  go.sum  install.sh  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
build-tester/: README.md
docs/: beta-testing-ff146.md  ec2-mac-builder.md  patch-upgrading-guide.md  per-context-patches.md  playwright-maintenance.md  release-checklist.md  release-hygiene.md  vulpine-mark-plan.md
example/: example.py
internal/: agent_soak_integration_test.go  integration_test.go
patches/: action-lock.patch  anti-font-fingerprinting.patch  audio-fingerprint-manager.patch  geolocation-spoofing.patch  locale-spoofing.patch  screen-dimension-manager.patch  screen-per-context.patch  timezone-spoofing.patch  webrtc-ip-spoofing.patch  webrtc-ip-spoofing.patch.disabled
pythonlib/: README.md
scripts/: bootstrap-ec2-mac-builder.sh  bundle-openclaw.sh  check-vulpinebox.sh  copy-additions.sh  entrypoint.sh  package.py  patch-omni.sh  public-boundary-audit.sh  public-history-audit.py  run-ec2-mac-build.sh  (+2 more)
vulpine-shared/: README.md  pyproject.toml
vulpine-shared/cdp/: client.py  commands.py  protocol.py
vulpine-shared/vulpine_shared/: __init__.py
vulpine-shared/vulpine_shared/fingerprint/: __init__.py  generator.py
vulpine-shared/vulpine_shared/stealth/: __init__.py  canvas.py
(+388 files in other folders)
