[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vulpine-shared"
version = "0.1.0"
description = "Shared utilities for Vulpine browser automation libraries"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["vulpine_shared", "vulpine_shared.fingerprint", "vulpine_shared.cdp"]